feat: add api key for pgs

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -21,6 +21,7 @@ ecommercePaymentInstruments.connectionTimeout=10000
 paymentTransactionsGateway.uri=http://localhost/pgs
 paymentTransactionsGateway.readTimeout=10000
 paymentTransactionsGateway.connectionTimeout=10000
+paymentTransactionsGateway.apiKey=key
 
 notificationsService.uri=http://localhost/notifications-service
 notificationsService.readTimeout=10000
