--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,7 @@ ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT=10000
 PAYMENT_TRANSACTIONS_GATEWAY_URI="http://pagopa-payment-transactions-gateway:8080"
 PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT=10000
 PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT=10000
+PAYMENT_TRANSACTIONS_GATEWAY_API_KEY=key
 
 ECOMMERCE_PAYMENT_INSTRUMENTS_URI="http://pagopa-ecommerce-payment-instruments-service:8080"
 ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT=10000
