--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -95,6 +95,7 @@ microservice-chart:
     NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transaction-events
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT: "600"
+    PAYMENT_TRANSACTIONS_GATEWAY_API_KEY=: payment-transactions-gateway-api-key
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
@@ -102,6 +103,7 @@ microservice-chart:
     NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
     ECOMMERCE_STORAGE_CONNECTION_STRING: ecommerce-storage-connection-string
     APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
+    PAYMENT_TRANSACTIONS_GATEWAY_API_KEY=: payment-transactions-gateway-api-key
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
