--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -51,6 +51,7 @@ microservice-chart:
       REDIS_PASSWORD: redis-ecommerce-password
       NODO_CONNECTION_STRING: nodo-connection-string
       APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
+      PAYMENT_TRANSACTIONS_GATEWAY_API_KEY=: payment-transactions-gateway-api-key
   image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommercetransactionsservice
     tag: "0.4.31"
@@ -149,6 +150,7 @@ microservice-chart:
     NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
     ECOMMERCE_STORAGE_CONNECTION_STRING: ecommerce-storage-connection-string
     APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
+    PAYMENT_TRANSACTIONS_GATEWAY_API_KEY= : payment-transactions-gateway-api-key
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
