refactor(api): change auth endpoint url `auth-request` -> `auth-requests`

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -47,7 +47,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
-  /transactions/{transactionId}/auth-request:
+  /transactions/{transactionId}/auth-requests:
     summary: Request authorization for the transaction identified by payment token
     post:
       operationId: requestTransactionAuthorization
