--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -47,7 +47,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
-  /transactions/{transactionId}/auth-request:
+  /transactions/{transactionId}/auth-requests:
     summary: Request authorization for the transaction identified by payment token
     post:
       operationId: requestTransactionAuthorization
@@ -328,8 +328,12 @@ components:
           type: string
           format: url
           description: URL where to redirect clients to continue the authorization process
+        authorizationRequestId:
+          type: string
+          description: Authorization request id
       required:
         - authorizationUrl
+        - authorizationRequestId
       example:
         authorizationUrl: https://example.com
     UpdateAuthorizationRequest:
