add MDC utilities to track request and thread

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,5 @@ paymentrequests.cache.ttl=${PAYMENT_REQUESTS_CACHE_TTL}
 
 spring.devtools.restart.enabled=false
 server.error.include-stacktrace=never
+
+logging.pattern.console=%-4r [%t] %5p %c{1} - %m - CONTEXT_KEY=%X{CONTEXT_KEY} - RTP_ID=%X{RTP_ID} - TRANSACTION_ID=%X{TRANSACTION_ID}%n
