feat: add new env for transaction activates events

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -46,6 +46,8 @@ microservice-chart:
       NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
       TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transaction-events
       TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT: "600"
+      TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: transactionactivatedevents
+      PAYMENT_TOKEN_TIMEOUT: "1800"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -143,6 +145,8 @@ microservice-chart:
     NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transaction-events
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT: "600"
+    TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: transactionactivatedevents
+    PAYMENT_TOKEN_TIMEOUT: "1800"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
