--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,8 +44,11 @@ management.endpoint.health.probes.enabled=true
 azurestorage.connectionstring=${ECOMMERCE_STORAGE_CONNECTION_STRING}
 azurestorage.queues.transactionauthrequestedtevents.name=${TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME}
 azurestorage.queues.transactionauthrequestedtevents.visibilityTimeout=${TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT}
+azurestorage.queues.transactionactivatedevents.name=${TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME}
 
 paymentrequests.cache.ttl=${PAYMENT_REQUESTS_CACHE_TTL}
 
 spring.devtools.restart.enabled=false
 server.error.include-stacktrace=never
+
+payment.token.timeout=${PAYMENT_TOKEN_TIMEOUT}
