--- a/pom.xml
+++ b/pom.xml
@@ -482,6 +482,24 @@
                             <includeConstructors>true</includeConstructors>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>transaction-activated-event</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <sourcePaths>
+                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_activated_event.json</sourcePath>
+                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_activation_requested_event.json</sourcePath>
+                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_authorization_requested_event.json</sourcePath>
+                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_authorization_status_updated_event.json</sourcePath>
+                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_closure_sent_event.json</sourcePath>
+                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_user_receipt_added_event.json</sourcePath>
+                            </sourcePaths>
+                            <targetPackage>it.pagopa.generated.ecommerce.events.v1</targetPackage>
+                            <includeConstructors>true</includeConstructors>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
