added dependsOn into Integration test stage

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -71,6 +71,7 @@ stages:
           displayName: 'Publish Code Coverage on Azure Devops'
 
   - stage: IntegrationTest
+    dependsOn: []
     jobs: 
       - job: make_integration_test  
         steps:
