--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -76,6 +76,10 @@ stages:
       - job: make_integration_test  
         steps:
         - checkout: pagopaEcommerceLocal
+        - script: 
+              sed -i.bak  "s/\${ECOMMERCE_TRANSACTIONS_COMMIT_SHA}/$(Build.SourceBranchName)/" global-transaction-service.env
+              cp global-transaction-service.env.env                                                 
+              rm global-transaction-service.env.bak 
         - script: docker-compose up --scale mongo-express=0 --scale redis-insight=0 -d
           displayName: 'Run app with docker-compose'
         - script: |
