Fix : misaligned element displayName

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -80,7 +80,7 @@ stages:
         - script: cp global-transaction-service.env .env 
         - script: rm global-transaction-service.env.bak 
         - script: docker-compose up --scale mongo-express=0 --scale redis-insight=0 -d
-        - displayName: 'Run app with docker-compose'
+          displayName: 'Run app with docker-compose'
         - script: |
               timeout 180 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:8080/actuator/health/liveness)" != "200" ]]; do sleep 5; done' || exit 1
           displayName: 'Health check'
