--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -76,15 +76,12 @@ stages:
       - job: make_integration_test  
         steps:
         - checkout: pagopaEcommerceLocal
-        - task: Bash@3
-          name: update_chart_version
-          displayName: 'change transaction branch name ecommerce-local .env'
-          inputs:
-            targetType: "inline"
-            script: |
-              sed -i.bak  "s/\${ECOMMERCE_TRANSACTIONS_COMMIT_SHA}/$(BRANCH_NAME)/" global-transaction-service.env 
-              cp global-transaction-service.env .env 
-              rm global-transaction-service.env.bak 
+        - script: | 
+            echo "##[debug] Change placeholder for ecommerce-transaction-service ..."
+            sed -i.bak  "s/\${ECOMMERCE_TRANSACTIONS_COMMIT_SHA}/$(BRANCH_NAME)/" global-transaction-service.env 
+            cp global-transaction-service.env .env 
+            rm global-transaction-service.env.bak 
+          displayName: 'Change transaction branch name ecommerce-local .env'
         - script: docker-compose up --scale mongo-express=0 --scale redis-insight=0 -d
           displayName: 'Run app with docker-compose'
         - script: |
