feat(error-handling): add error event to queue when failing to invoke Nodo's `closePaymentV2`

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,8 @@ TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME=transactionauthrequestedtev
 TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT=60
 TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME=transactionactivatedevents
 
+TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME=transactionclosuresentevents
+
 NOTIFICATIONS_SERVICE_API_KEY=api-key
 NOTIFICATIONS_SERVICE_URI="http://pagopa-ecommerce-traefik/notifications-service"
 NOTIFICATIONS_SERVICE_READ_TIMEOUT=10000
