--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -96,7 +96,8 @@ microservice-chart:
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transaction-events
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT: "600"
     TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: transactionactivatedevents
-    PAYMENT_TOKEN_TIMEOUT: "1800"
+    TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: transactionclosuresentevents
+    PAYMENT_TOKEN_TIMEOUT: 1800
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
