--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -78,9 +78,7 @@ stages:
         - checkout: pagopaEcommerceLocal
         - script: | 
             echo "##[debug] Change placeholder for ecommerce-transaction-service ..."
-            sed -i.bak  "s/\${ECOMMERCE_TRANSACTIONS_COMMIT_SHA}/$(BRANCH_NAME)/" global-transaction-service.env 
-            cp global-transaction-service.env .env 
-            rm global-transaction-service.env.bak 
+            sed "s/\${ECOMMERCE_TRANSACTIONS_COMMIT_SHA}/$(BRANCH_NAME)/" global-transaction-service.env > .env
           displayName: 'Change transaction branch name ecommerce-local .env'
         - script: docker-compose up --scale mongo-express=0 --scale redis-insight=0 --scale pagopa-notifications-service=0 -d
           displayName: 'Run app with docker-compose'
