feat: add new expired status

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -551,6 +551,7 @@ components:
         - CLOSURE_FAILED
         - NOTIFIED
         - NOTIFIED_FAILED
+        - EXPIRED
     ProblemJson:
       type: object
       properties:
