feat(error-handling): project closure error event into view

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -661,6 +661,7 @@ components:
         - AUTHORIZATION_FAILED
         - CLOSED
         - CLOSURE_FAILED
+        - CLOSURE_ERROR
         - NOTIFIED
         - NOTIFIED_FAILED
         - EXPIRED
