--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,4 +53,8 @@ paymentrequests.cache.ttl=${PAYMENT_REQUESTS_CACHE_TTL}
 
 spring.devtools.restart.enabled=false
 server.error.include-stacktrace=never
-payment.token.timeout=${PAYMENT_TOKEN_TIMEOUT}
+
+payment.token.validity=${PAYMENT_TOKEN_VALIDITY_TIME}
+transactions.ecommerce.retry.offset=${TRANSACTIONS_RETRY_OFFSET}
+
+transactions.closure_handler.retry_interval=${CLOSURE_RETRY_INTERVAL}
