--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -40,4 +40,7 @@ azurestorage.queues.transactionauthrequestedtevents.name=transactionauthrequeste
 azurestorage.queues.transactionauthrequestedtevents.visibilityTimeout=300
 azurestorage.queues.transactionclosuresentevents.name=transactionclosuresentevents
 
-payment.token.timeout=120
+payment.token.validity=120
+transactions.ecommerce.retry.offset=20
+
+transactions.closure_handler.retry_interval=10
