--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -552,6 +552,7 @@ components:
         - NOTIFIED
         - NOTIFIED_FAILED
         - EXPIRED
+        - REFUNDED
     ProblemJson:
       type: object
       properties:
