--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,8 @@ spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HO
 spring.data.mongodb.database=ecommerce
 
 management.endpoint.health.probes.enabled=true
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
 
 azurestorage.connectionstring=${ECOMMERCE_STORAGE_CONNECTION_STRING}
 azurestorage.queues.transactionauthrequestedtevents.name=${TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME}
@@ -49,3 +51,5 @@ paymentrequests.cache.ttl=${PAYMENT_REQUESTS_CACHE_TTL}
 
 spring.devtools.restart.enabled=false
 server.error.include-stacktrace=never
+
+
