[CHK-736] Send transaction activated event in azure storage queue (#74)
* feat: add new env for transaction activates events

* feat: send transactionActivatedQueueEvent in transactionactivated queue

* fix: update unit test

* feat: send messagge in activation nm3

* fix: typo

* feat: refactorgin activated event

* fix: event message

* fix: refactoring event sent and tests

* feat: add new expired status

* feat: add refunded status

* Update src/main/java/it/pagopa/transactions/commands/handlers/TransactionActivateResultHandler.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* Update src/main/java/it/pagopa/transactions/commands/handlers/TransactionActivateHandler.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* Update src/main/java/it/pagopa/transactions/commands/handlers/TransactionActivateResultHandler.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* enable feature branch for testing

* Bump version [skip ci]

* feat: decrease payment-token

* Bump version [skip ci]

* fix: queue name

* Bump version [skip ci]

* fix: release branch

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>
Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>
Co-authored-by: pagopa-github-bot <>

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -551,6 +551,8 @@ components:
         - CLOSURE_FAILED
         - NOTIFIED
         - NOTIFIED_FAILED
+        - EXPIRED
+        - REFUNDED
     ProblemJson:
       type: object
       properties:
