--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -319,6 +319,11 @@ components:
           oneOf:
             - $ref: "#/components/schemas/PostePayAuthRequestDetails"
             - $ref: "#/components/schemas/CardAuthRequestDetails"
+          discriminator:
+            propertyName: detailType
+            mapping:
+              postepay: "#/components/schemas/PostePayAuthRequestDetails"
+              card: "#/components/schemas/CardAuthRequestDetails"
       required:
         - amount
         - fee
@@ -330,18 +335,24 @@ components:
       type: object
       description: Additional payment authorization details for the PostePay payment method
       properties:
+        detailType:
+          type: string
         accountEmail:
           type: string
           format: email
           description: PostePay account email
       required:
+        - detailType
         - accountEmail
       example:
+        detailType: "postepay"
         accountEmail: "user@example.com"
     CardAuthRequestDetails:
       type: object
       description: Additional payment authorization details for credit cards
       properties:
+        detailType:
+          type: string
         cvv:
           type: string
           description: Credit card CVV
@@ -358,11 +369,13 @@ components:
           type: string
           description: The card holder name
       required:
+        - detailType
         - cvv
         - pan
         - expiryDate
         - holderName
       example:
+        detailType: "card"
         cvv: 000
         pan: 0123456789012345
         expiryDate: "2099-01-01"
