--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -58,6 +58,13 @@ paths:
             type: string
           required: true
           description: Transaction ID
+        - in: header
+          name: x-pgs-id
+          schema:
+            type: string
+            pattern: 'XPAY|VPOS'
+          required: true
+          description: Pgs identifier (populated by APIM policy)
       requestBody:
         $ref: "#/components/requestBodies/RequestAuthorizationRequest"
       responses:
