--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -259,50 +259,98 @@ components:
       type: string
       minLength: 32
       maxLength: 32
-    NewTransactionRequest:
+    PaymentNoticeInfo:
+      description: Informations about a single payment notice
       type: object
-      description: Request body for creating a new transaction
       properties:
         rptId:
           $ref: '#/components/schemas/RptId'
         paymentContextCode:
           $ref: '#/components/schemas/PaymentContextCode'
-        email:
-          type: string
         amount:
           $ref: '#/components/schemas/AmountEuroCents'
       required:
         - rptId
-        - email
         - amount
       example:
         rptId: string
+        paymentContextCode: paymentContextCode
+        amount: 100
+    PaymentInfo:
+      description: Informations about transaction payments
+      type: object
+      properties:
+        paymentToken:
+          type: string
+        rptId:
+          $ref: '#/components/schemas/RptId'
+        reason:
+          type: string
+        amount:
+          $ref: '#/components/schemas/AmountEuroCents'
+        authToken:
+          type: string
+      required:
+        - rptId
+        - amount
+      example:
+        rptId: "77777777777302012387654312384"
+        paymentToken: "paymentToken1"
+        reason: "reason1"
+        amount: 100
+        authToken: "authToken1"
+    NewTransactionRequest:
+      type: object
+      description: Request body for creating a new transaction
+      properties:
+        paymentNotices:
+          type: array
+          items:
+            $ref: '#/components/schemas/PaymentNoticeInfo'
+          minItems: 1
+          maxItems: 5
+          example:
+            -  rptId: "77777777777302012387654312384"
+               paymentContextCode: paymentContextCode1
+               amount: 100
+            -  rptId: "77777777777302012387654312385"
+               paymentContextCode: paymentContextCode2
+               amount: 200
+        email:
+          type: string
+      required:
+        - paymentNotices
+        - email
     NewTransactionResponse:
       type: object
       description: Transaction data returned when creating a new transaction
       properties:
         transactionId:
           type: string
-        paymentToken:
-          type: string
-        rptId:
-          $ref: '#/components/schemas/RptId'
+        payments:
+          type: array
+          items:
+            $ref: '#/components/schemas/PaymentInfo'
+          minItems: 1
+          maxItems: 5
+          example:
+            - rptId: "77777777777302012387654312384"
+              paymentToken: "paymentToken1"
+              reason: "reason1"
+              amount: 100
+              authToken: "authToken1"
+            - rptId: "77777777777302012387654312385"
+              paymentToken: "paymentToken2"
+              reason: "reason2"
+              amount: 100
+              authToken: "authToken2"
         status:
           $ref: "#/components/schemas/TransactionStatus"
-        reason:
-          type: string
-        amount:
-          $ref: '#/components/schemas/AmountEuroCents'
-          minLength: 1
-          maxLength: 140
-        authToken:
-          type: string
       required:
         - transactionId
         - amount
         - status
-      example:
-        amount: 200
+        - payments
     RequestAuthorizationRequest:
       type: object
       description: Request body for requesting an authorization for a transaction
@@ -520,9 +568,6 @@ components:
               $ref: "#/components/schemas/TransactionStatus"
           required:
             - status
-      example:
-        amount: 200
-        status: ACTIVATED
     AmountEuroCents:
       description: Amount for payments, in euro cents
       type: integer
