--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -288,8 +288,6 @@ components:
           type: string
         amount:
           $ref: '#/components/schemas/AmountEuroCents'
-        authToken:
-          type: string
       required:
         - rptId
         - amount
@@ -298,7 +296,6 @@ components:
         paymentToken: "paymentToken1"
         reason: "reason1"
         amount: 100
-        authToken: "authToken1"
     NewTransactionRequest:
       type: object
       description: Request body for creating a new transaction
@@ -338,17 +335,28 @@ components:
               paymentToken: "paymentToken1"
               reason: "reason1"
               amount: 100
-              authToken: "authToken1"
             - rptId: "77777777777302012387654312385"
               paymentToken: "paymentToken2"
               reason: "reason2"
               amount: 100
-              authToken: "authToken2"
         status:
           $ref: "#/components/schemas/TransactionStatus"
+        amountTotal:
+          $ref: "#/components/schemas/AmountEuroCents"
+        feeTotal:
+          $ref: "#/components/schemas/AmountEuroCents"
+        origin:
+          description: cart origin
+          enum:
+            - IO
+            - CHECKOUT
+            - CHECKOUT_CART
+            - UNKNOWN
+        authToken:
+          type: string
       required:
         - transactionId
-        - amount
+        - amountTotal
         - status
         - payments
     RequestAuthorizationRequest:
