feat: add environment variable for parallel request parameter

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ NODE_FOR_PSP_URI=/webservices/pof/PagamentiTelematiciPspNodoservice
 NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
 NODO_CONNECTION_STRING="{\"idPSP\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPSP\":\"idBrokerPsp\",\"password\":\"password\"}"
+NODO_PARALLEL_REQUESTS: "5"
 
 NODOPERPM_URI=/nodo/nodo-per-pm/v1/informazioniPagamento
 NODOPERPM_READ_TIMEOUT=10000
