--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -81,6 +81,7 @@ microservice-chart:
     NODOPERPM_CONNECTION_TIMEOUT: "10000"
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
+    NODO_PARALLEL_REQUESTS: "5"
     ECOMMERCE_SESSIONS_URI: https://api.dev.platform.pagopa.it/ecommerce/sessions-service/v1
     ECOMMERCE_SESSIONS_READ_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: "10000"
