[CHK-742] feat(error-handling): add error event to queue when failing to invoke Nodo's `closePaymentV2` (#78)
* feat(error-handling): add error event to queue when failing to invoke Nodo's `closePaymentV2`

* fix(node-for-psp): fix `UnsupportedMediaTypeException` when getting non-JSON response

* refactor(transactions): add transition from authorized -> closure error transaction class

* feat(error-handling): project closure error event into view

* fix(error-handling): properly compute visibility timeout when enqueueing retry events

* feat(transaction-events): add recovery transition `CLOSURE_ERROR` -> {`CLOSED`, `CLOSURE_FAILED`}

* refactor(tests): move transaction test constants to separate file

* test(handlers): add tests for `ClosureErrorProjectionHandler`

* refactor(logging): add logs when [not] enqueueing error events

* refactor(events): move `authorizationCode` field from closure event to auth status update event

* fix: misc rebase fixes

* docs(readme): add missing env vars in readme

* style(pipelines): remove extra newlines from cr pipeline

* fix: align application-tests.properties

* fix(lint): fix sonarcloud code smells

* style: apply spotless formatting

Co-authored-by: Pietro Tota <pietro.tota@pagopa.it>

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -47,7 +47,10 @@ microservice-chart:
       TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transaction-events
       TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT: "600"
       TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: pagopa-u-weu-ecommerce-activated-events-queue
-      PAYMENT_TOKEN_TIMEOUT: "120"
+      TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: transactionclosuresentevents
+      PAYMENT_TOKEN_VALIDITY_TIME: 1800
+      TRANSACTIONS_RETRY_OFFSET: 60
+      CLOSURE_RETRY_INTERVAL: 30
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -146,7 +149,7 @@ microservice-chart:
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transaction-events
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT: "600"
     TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: pagopa-u-weu-ecommerce-activated-events-queue
-    PAYMENT_TOKEN_TIMEOUT: "120"
+    PAYMENT_TOKEN_VALIDITY_TIME: "120"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
