fix: helm numeric values to string values

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -98,9 +98,9 @@ microservice-chart:
     TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT: "600"
     TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: transactionactivatedevents
     TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: transactionclosuresentevents
-    PAYMENT_TOKEN_VALIDITY_TIME: 1800
-    TRANSACTIONS_RETRY_OFFSET: 60
-    CLOSURE_RETRY_INTERVAL: 30
+    PAYMENT_TOKEN_VALIDITY_TIME: "1800"
+    TRANSACTIONS_RETRY_OFFSET: "60"
+    CLOSURE_RETRY_INTERVAL: "30"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
