fix: refactoring header name

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -9,7 +9,7 @@ paths:
       operationId: newTransaction
       parameters:
         - in: header
-          name: x-transaction-origin
+          name: X-Client-Id
           schema:
             type: string
             pattern: 'IO|CHECKOUT|CHECKOUT_CART'
