fix: refactoring origin to client id + commons update

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -350,8 +350,8 @@ components:
           $ref: "#/components/schemas/TransactionStatus"
         feeTotal:
           $ref: "#/components/schemas/AmountEuroCents"
-        origin:
-          description: cart origin
+        clientId:
+          description: transaction client id
           enum:
             - IO
             - CHECKOUT
