--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.redis.ssl=${REDIS_SSL_ENABLED}
 spring.data.redis.repositories.type=none
 spring.jackson.default-property-inclusion=non_null
 logging.level.web=${WEB_LOGGING_LEVEL:off}
-logging.level.it.pagopa=${PAGOPA_LOGGING_LEVEL:info}
+logging.level.it.pagopa=${SERVICE_LOGGING_LEVEL:info}
 
 nodoPerPM.uri=${NODOPERPM_URI}
 nodoPerPM.readTimeout=${NODOPERPM_READ_TIMEOUT}
