--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.redis.port=${REDIS_PORT}
 spring.redis.ssl=${REDIS_SSL_ENABLED}
 spring.data.redis.repositories.type=none
 spring.jackson.default-property-inclusion=non_null
-logging.level.web=debug
-
+logging.level.web=${WEB_LOGGING_LEVEL:off}
+logging.level.it.pagopa=${SERVICE_LOGGING_LEVEL:info}
 
 nodoPerPM.uri=${NODOPERPM_URI}
 nodoPerPM.readTimeout=${NODOPERPM_READ_TIMEOUT}
