feat: jwt token generation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,3 +59,6 @@ payment.token.validity=${PAYMENT_TOKEN_VALIDITY_TIME}
 transactions.ecommerce.retry.offset=${TRANSACTIONS_RETRY_OFFSET}
 
 transactions.closure_handler.retry_interval=${CLOSURE_RETRY_INTERVAL}
+
+jwt.secret=${JWT_SECRET}
+jwt.validityMillis=${JWT_TOKEN_VALIDITY_TIME_MILLIS}
