--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -103,6 +103,7 @@ microservice-chart:
     CLOSURE_RETRY_INTERVAL: "30"
     WEB_LOGGING_LEVEL: "off"
     SERVICE_LOGGING_LEVEL: "info"
+    JWT_TOKEN_VALIDITY_TIME_MILLIS: "1800000"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
@@ -111,6 +112,7 @@ microservice-chart:
     ECOMMERCE_STORAGE_CONNECTION_STRING: ecommerce-storage-connection-string
     APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
+    JWT_SECRET: sessions-jwt-secret
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
