--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -54,12 +54,14 @@ microservice-chart:
       CLOSURE_RETRY_INTERVAL: "30"
       WEB_LOGGING_LEVEL: "off"
       SERVICE_LOGGING_LEVEL: "info"
+      JWT_TOKEN_VALIDITY_TIME_MILLIS: "1800000"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
       NODO_CONNECTION_STRING: nodo-connection-string
       APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
       PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
+      JWT_SECRET: sessions-jwt-secret
   image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommercetransactionsservice
     tag: "0.6.2"
@@ -159,6 +161,7 @@ microservice-chart:
     CLOSURE_RETRY_INTERVAL: "30"
     WEB_LOGGING_LEVEL: "off"
     SERVICE_LOGGING_LEVEL: "info"
+    JWT_TOKEN_VALIDITY_TIME_MILLIS: "1800000"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
@@ -167,6 +170,7 @@ microservice-chart:
     ECOMMERCE_STORAGE_CONNECTION_STRING: ecommerce-storage-connection-string
     APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
+    JWT_SECRET: sessions-jwt-secret
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
