fix: add servicePort for ingress

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -89,6 +89,7 @@ microservice-chart:
     create: true
     host: "weuuat.ecommerce.internal.uat.platform.pagopa.it"
     path: /pagopa-ecommerce-transactions-service/(.*)
+    servicePort: 8080
   serviceAccount:
     create: false
     annotations: {}
