--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -31,6 +31,7 @@ microservice-chart:
     create: true
     host: "weudev.ecommerce.internal.dev.platform.pagopa.it"
     path: /pagopa-ecommerce-transactions-service/(.*)
+    servicePort: 8080
   serviceAccount:
     create: false
     annotations: {}
