[CHK-1032] update auth-reqeust and add check for threedsdata in transactionService (#127)
add threedsdata field to cardauthrequestdetails. add brand to cardauthrequestdetails. all fields are required.
---------

Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MBP-di-Gianluca.homenet.telecomitalia.it>

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -436,18 +436,28 @@ components:
         holderName:
           type: string
           description: The card holder name
+        brand:
+          type: string
+          description: The card brand name
+        threeDsData:
+          type: string
+          description: three ds data evaluated from client
       required:
         - detailType
         - cvv
         - pan
         - expiryDate
         - holderName
+        - brand
+        - threeDsData
       example:
         detailType: "card"
         cvv: 000
         pan: 0123456789012345
         expiryDate: "209901"
         holderName: "Name Surname"
+        brand: "VISA"
+        threeDsData: "threeDsData"
     RequestAuthorizationResponse:
       type: object
       description: Response body for requesting an authorization for a transaction
